--- a/src/style.css
+++ b/src/style.css
@@ -464,7 +464,7 @@ ul.header-user-details li:nth-child(9) .bottom-info::before {
 	padding: 48px;
 	display: grid;
 	gap: 32px;
-  grid-template-columns: 65.1% auto;
+	grid-template-columns: 65.1% auto;
 }
 
 .profile {
@@ -476,7 +476,7 @@ ul.header-user-details li:nth-child(9) .bottom-info::before {
 	padding: 16px;
 	gap: 16px;
 	border-radius: 8px;
-  height: fit-content;
+	height: fit-content;
 }
 
 .profile-header {
@@ -551,7 +551,6 @@ ul.header-user-details li:nth-child(9) .bottom-info::before {
 	grid-column: 9/13;
 }
 
-
 .card-screen {
 	flex: 1 1 0;
 }
@@ -613,7 +612,7 @@ ul.header-user-details li:nth-child(9) .bottom-info::before {
 	flex-direction: column;
 	border-left: 1px solid #d5d5d5;
 	padding-left: 31px;
-  width: 100%;
+	width: 100%;
 }
 
 ul.more-info-details {
@@ -695,4 +694,64 @@ ul.more-info > li:nth-child(5) .more-info-texts header {
 	font-weight: 400;
 	line-height: 116%;
 	color: #999999;
+}
+
+@media (max-width: 1024px) {
+	.header {
+		margin-top: 0;
+	}
+	.main {
+		grid-template-columns: 100%;
+	}
+
+	
+
+	.cards ul li:nth-child(1),
+	.cards ul li:nth-child(2),
+	.cards ul li:nth-child(3),
+	.cards ul li:nth-child(4),
+	.cards ul li:nth-child(5),
+	.cards ul li:nth-child(6),
+	.cards ul li:nth-child(7),
+	.cards ul li:nth-child(8),
+	.cards ul li:nth-child(9) {
+		grid-column: 1;
+	}
+
+	section .cards {
+		width: 100%;
+	}
+	.cards ul {
+		grid-template-columns: 100%;
+		width: 100%;
+	}
+
+	.aside {
+		padding-left: 0;
+		border-left: none;
+	}
+
+	ul.header-user-details {
+		flex-direction: column;
+	}
+
+	.v-spacer75 {
+		width: 100%;
+		height: 1px;
+		min-height: 1px;
+	}
+
+	ul.header-user-details li:last-child {
+		align-self: flex-start;
+	}
+
+	a.settings {
+		justify-content: left;
+	}
+
+	.header-site-controls {
+		flex-direction: column;
+		align-items: flex-start;
+		gap:24px
+	}
 }
